@@ -42,6 +42,10 @@ namespace Spooky.Content.NPCs.Boss.Daffodil
 
         public override void AI()
         {
+            Spooky.DaffodilSpawnX = (int)NPC.Center.X;
+            Spooky.DaffodilSpawnY = (int)NPC.Center.Y + 30; 
+            Spooky.DaffodilParent = NPC.whoAmI;
+
             //sleepy particles
             if (!NPC.AnyNPCs(ModContent.NPCType<DaffodilEye>()))
             {
@@ -69,10 +73,19 @@ namespace Spooky.Content.NPCs.Boss.Daffodil
                     ChatHelper.BroadcastChatMessage(NetworkText.FromKey(text), new Color(171, 64, 255));
                 }
 
-                NPC.ai[1] = NPC.NewNPC(NPC.GetSource_FromAI(), (int)NPC.Center.X, (int)NPC.Center.Y + 30, 
-                ModContent.NPCType<DaffodilEye>(), ai0: Main.rand.NextBool(20) && Flags.downedDaffodil ? -4 : -1, ai1: NPC.whoAmI);
+                if (Main.netMode != NetmodeID.SinglePlayer) 
+				{
+                    ModPacket packet = Mod.GetPacket();
+					packet.Write((byte)SpookyMessageType.SpawnDaffodilEye);
+					packet.Send();
+                }
+                else
+                {
+                    NPC.ai[1] = NPC.NewNPC(NPC.GetSource_FromAI(), (int)NPC.Center.X, (int)NPC.Center.Y + 30, 
+                    ModContent.NPCType<DaffodilEye>(), ai0: Main.rand.NextBool(20) && Flags.downedDaffodil ? -4 : -1, ai1: NPC.whoAmI);
+                }
 
-                NetMessage.SendData(MessageID.SyncNPC, number: (int)NPC.ai[1]);
+                //NetMessage.SendData(MessageID.SyncNPC, number: (int)NPC.ai[1]);
 
                 NPC.ai[0] = 0;
 
